opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/pkcs11"
bug-reports: "https://github.com/cryptosense/pkcs11/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/pkcs11.git"
doc: "https://cryptosense.github.io/pkcs11/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "cmdliner"
  "pkcs11" {>= "0.18.0"}
  "dune" {>= "1.3.0"}
]
tags: ["org:cryptosense"]
synopsis: "Cmdliner arguments to initialize a PKCS#11 session"
