opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/pkcs11"
bug-reports: "https://github.com/cryptosense/pkcs11/issues"
license: "BSD-2-Clause"
dev-repo: "git+https://github.com/cryptosense/pkcs11.git"
doc: "https://cryptosense.github.io/pkcs11/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "cmdliner" {>= "0.9.8"}
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.07.0"}
  "pkcs11" {>= "0.18.0"}
]
tags: ["org:cryptosense"]
synopsis: "Cmdliner arguments to initialize a PKCS#11 session"
