opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/pkcs11"
bug-reports: "https://github.com/cryptosense/pkcs11/issues"
license: "BSD-2-Clause"
dev-repo: "git+https://github.com/cryptosense/pkcs11.git"
doc: "https://cryptosense.github.io/pkcs11/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ctypes"
  "ctypes-foreign"
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.07.0"}
  "ounit" {with-test}
  "pkcs11" {>= "0.18.0"}
  "ppx_deriving" { >= "4.0" }
  "ppx_deriving_yojson" { >= "3.0" }
  "yojson" {>= "1.6.0"}
]
conflicts: [
  "ctypes" { < "0.12.0" }
]
tags: ["org:cryptosense"]
synopsis: "Bindings to the PKCS#11 cryptographic API"
description: """
This library contains ctypes bindings to the PKCS#11 API.
"""
