opam-version: "2.0"
maintainer: "Nathan Rebours <nathan@cryptosense.com>"
authors: "Etienne Millon <etienne@cryptosense.com>"
homepage: "https://github.com/cryptosense/pkcs11"
bug-reports: "https://github.com/cryptosense/pkcs11/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/pkcs11.git"
doc: "https://cryptosense.github.io/pkcs11/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ctypes"
  "ctypes-foreign"
  "dune" {>= "1.3.0"}
  "hex" { >= "1.0.0" }
  "integers"
  "ppx_deriving" { >= "4.0" }
  "ppx_deriving_yojson" { >= "3.0" }
  "ppx_variants_conv"
  "zarith"
  "ocaml" {>= "4.03.0"}
  "ounit" {with-test}
]
conflicts: [
  "ctypes" { < "0.12.0" }
]
tags: ["org:cryptosense"]
available: [os != "macos"]
synopsis: "Bindings to the PKCS#11 cryptographic API"
description: """
This library contains ctypes bindings to the PKCS#11 API.

This API is used by smartcards and Hardware Security Modules to perform
cryptographic operations such as signature or encryption.
"""
