opam-version: "2.0"
maintainer: ["Cryptosense <opensource@cryptosense.com>"]
authors: ["Cryptosense <opensource@cryptosense.com>"]
homepage: "https://github.com/cryptosense/pkcs11"
bug-reports: "https://github.com/cryptosense/pkcs11/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/pkcs11.git"
doc: "https://cryptosense.github.io/pkcs11/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.3.0"}
  "hex" { >= "1.0.0" }
  "integers"
  "ppx_deriving" { >= "4.0" }
  "ppx_deriving_yojson" { >= "3.4" }
  "ppx_variants_conv"
  "zarith"
  "ocaml" {>= "4.04.0"}
  "ounit" {with-test}
]
tags: ["org:cryptosense"]
available: [os != "macos"]
synopsis: "PKCS#11 OCaml types"
description: """
This library contains type definitions for the PKCS#11 API.

This API is used by smartcards and Hardware Security Modules to perform
cryptographic operations such as signature or encryption.
"""
